--- a/report/papers/Bibfile.bib
+++ b/report/papers/Bibfile.bib
@@ -1,4 +1,15 @@
 % Encoding: UTF-8
+@article{Ni2010,
+author = {Ni, Xiao and Zhang, Daowen and Zhang, Hao Helen},
+title = {Variable Selection for Semiparametric Mixed Models in Longitudinal Studies},
+journal = {Biometrics},
+
+volume = {66},
+number = {1},
+pages = {79-88},
+keywords = {Correlated data, Gaussian stochastic process, Linear mixed models, Smoothly clipped absolute deviation, Smoothing splines},
+year = {2010}
+}
 
 @Standard{aqi,
    title   = {环境空气质量指数(AQI)技术规定(试行)},
@@ -427,6 +438,8 @@ title={半参数回归模型及其应用},
   title  = {Generalized Additive Models An Introduction with R, Second Edition},
   year   = {2017},
   author = {Simon N. Wood},
+publisher = {Chapman Hall},
+address = {UK:London},
 }
 
 @Article{Wood2017a,
