--- a/report/papers/paper-aqi-gamm.Rmd
+++ b/report/papers/paper-aqi-gamm.Rmd
@@ -50,22 +50,14 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
-**TODO**
-
-- [ ] 半参数可加混合模型简介
-- [ ] 两个汇总系数表中模型I，II，III，IV 对应的具体模型
-- [ ] 两个汇总系数表下面注明显著性符号
-
-
 **摘要:** 本文以2014-2017年中国重点监测的35个城市的年度和月度空气质量指数为研究
-对象，利用半参数混合效应模型对城市空气质量的影响因素进行研究。该模型综合考虑了自
-变量对因变量的线性和非线性固定效应以及描述观测值数据相关性的随机效应。研究结果显
-示，对于年均AQI，社会经济因素中的废气治理完成投资额是正的线性影响，固定资产投资
-和汽车拥有量是非线性关系；气候因素中的平均风速是线性关系，平均气温具有非线性关系;是
-否临海，是否供暖和纬度三个地理因素对年均AQI有线性影响。对于月均AQI，社会经济方面
-的三个影响因素废气治理完成投资额，房屋建筑施工面积和汽车拥有量均为线性影响；平均
-气温，降水量，平均风速和平均气压这四个气象变量对月均AQI均有显著的线性影响；地理
-因素中的是否临海，是否供暖是线性影响，纬度对月均AQI有显著的非线性影响。
+对象，利用半参数混合效应模型对城市空气质量的影响因素进行研究。研究结果显示，对于
+年均AQI，社会经济因素中的废气治理完成投资额是正的线性影响，固定资产投资和汽车拥
+有量是非线性关系；气候因素中的平均风速是线性关系，平均气温具有非线性关系;是否临
+海，是否供暖和纬度三个地理因素对年均AQI有线性影响。对于月均AQI，社会经济方面的三
+个影响因素废气治理完成投资额，房屋建筑施工面积和汽车拥有量均为线性影响；平均气温，
+降水量，平均风速和平均气压这四个气象变量对月均AQI均有显著的线性影响；地理因素中
+的是否临海，是否供暖是线性影响，纬度对月均AQI有显著的非线性影响。
 
 # 简介
 
@@ -92,25 +84,18 @@ Zheng,2017,李健、靳泽凡、苑清敏，2019）[@zanin2012assessing;@zheng20
 方法[@湛社霞2018;@李经路2017]。
 
 基于以上文献分析，可以发现：第一、在考虑空气质量的影响因素时，鲜有研究引入地理因
-素。第二，在分析空气质量影响因素时，当前使用的方法很少有考虑影响因素对空气质量的
-非线性效应和对于不同城市，影响因素对于空气质量的影响是不一样的，也即城市间可能存
-在随机效应。因此，本文以空气质量指数为研究对象，利用半参数混合效应模型对城市空气
-质量的影响因素进行研究。本文选取2014-2017年中国重点监测的35个城市的年度数据和月
-度数据，综合考虑社会经济因素，气象因素和地理因素三方面的影响，分别以年度平均AQI
-和月度平均对数AQI为因变量建立半参数混合效应模型进行相应研究，为空气质量状况研究
-提供新的研究方法，并完善空气质量状况的研究体系。
+素，本文将同时引入地理因素。第二，在分析空气质量影响因素时，当前使用的方法很少有
+考虑影响因素对空气质量的非线性效应和对于不同城市，影响因素对于空气质量的影响是不
+一样的，也即城市间可能存在随机效应，对于可能的非线性效应和混合效应，半参数混合模
+型可以很好的处理这些问题。因此，本文以空气质量指数为研究对象，利用半参数混合效应
+模型对城市空气质量的影响因素进行研究。本文选取2014-2017年中国重点监测的35个城市
+的年度数据和月度数据，综合考虑社会经济因素，气象因素和地理因素三方面的影响，分别
+以年度平均AQI和月度平均对数AQI为因变量建立半参数混合效应模型进行相应研究，为空气
+质量状况研究提供新的研究方法，并完善空气质量状况的研究体系。
 
-<!-- **半参数混合效应模型简介** -->
-
-在实际建模过程中自变量与因变量的关系并不都是非线性关系，最具灵活性的模型应是在同
-一个模型中既包含参数项又包含非参数项，模型的参数部分还允许像哑变量或定序变量的离散
-变量与参数项一起建模，当包含离散变量，便可以研究分组数据。但经典的线性假设认为观测
-值来自一个独立的总体，即是独立同分布的，对于一般的分组数据，其组内观测值是相关的，
-因为他们属于相同的子总体，而组间是独立的。为此，综合考虑混合效应使用半参数混合
-效应模型，该模型中的混合效应是分析分组数据的灵活工具，纵向数据、重复观测数据、多水
-平数据、层次数据等都属于分组数据，混合效应通过复杂的方差结构可以对分组数据中存在的
-组内相关进行建模，同时，还可以拟合异方差数据。一般地，半参数混合模型具有以下形式
-
+半参数回归模型是 Engle 等(1986)在研究英国电力需求预测时提出了一种回归模型
+[@engle1986semiparametric]。半参数混合模型是在半参数回归模型中增加随机效应项。
+一般地，半参数混合模型具有以下形式
 $$y_{i}=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_{2i})
   + \cdots + \boldsymbol{Z_{i}b} + \varepsilon_{i}$${#eq:additive-mixed}
   
@@ -119,10 +104,13 @@ $$y_{i}=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_{2i})
  $\boldsymbol{Z_{i}}$ 是随机效应的设计矩阵， $\boldsymbol{b \sim \mathcal{N} (0,
  \Psi)}$ 是随机效应变量，其中方差协方差阵 $\boldsymbol{\Psi}$ 一般未知而需要估计，
  $\boldsymbol{\varepsilon \sim \mathcal{N}(0,\Lambda)}$ 是误差向量，其由
- $\varepsilon_{i}$ 堆积而成，一般假设其方差协方差矩阵具有比较简单的形式。
-
-在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，允许自变量与因变量的关系
-存在多种形式，而随机效应用来拟合观测值之间的相关关系和数据的异质性。
+ $\varepsilon_{i}$ 堆积而成，一般假设其方差协方差矩阵具有比较简单的形式。在模型
+ 中，线性预测子和非参数函数共同来拟合自变量的固定效应，允许自变量与因变量的关系
+ 存在多种形式，而随机效应用来拟合观测值之间的相关关系和数据的异质性。Zhang 等
+ (1998)对基于纵向数据的半参数混合模型进行了研究[@Zhang1998]。Zhang 和 Lin (2003) 对半参数混
+ 合模型的推断问题进行了研究[@zhang2003hypothesis]。Ni等(2010)研究了半
+ 参数混合模型的变量选择问题[@Ni2010]。本文使用 Wood(2017) 的著作中给出的R语言包
+ mgcv 来估计各种具体半参数混合模型[@Wood2017]。
 
 文章以下部分的结构为：第二部分说明了变量选择和数据来源，给出了数据处理过程；第三
 部分在使用Lasso方法选择自变量的基础上，以年度平均AQI为因变量建立了半参数混合模型
