--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -52,19 +52,16 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
-# 摘要
-
-本文以2014-2017年中国重点监测的35个城市的年度空气质量为优天数和月度空气质量为优天数为研
-究对象，利用广义可加混合模型对城市空气质量的影响因素进行研究。该模型综合考虑了自变量对因变量的线性和非
-线性固定效应以及描述观测值数据相关性的随机效应。研究结果显示，对于年度空气质量为优天数，
-社会经济影响因素中的全社会用电量和废气治理完成投资额与年度空气质量为优天数之间具有线性关系，
-GDP具有非线性作用；气候因素中的平均相对湿度和平均风速对年度空气质量为优天数有线
-性影响。地理因素中只有纬度变量对年度空气质量为优天数有显著性影响，并且关系是非线
-性的。对于月度空气质量为优天数，社会经济影响因素有房屋建筑施工面积和废气治理完成
-投资额，并且二者与年度空气质量为优天数之间均具有线性关系；气候因素中的平均气温，
-降水量，平均相对湿度和平均风速对月度空气质量为优天数有线性影响。地理因素中是否供
-暖和纬度变量对月度空气质量为优天数有显著性影响，是否供暖是线性关系，纬度是非线性
-影响。
+**摘要**本文以2014-2017年中国重点监测的35个城市的年度空气质量为优天数和月度空气
+质量为优天数为研究对象，利用广义可加混合模型对城市空气质量的影响因素进行研究。研
+究结果显示，对于年度空气质量为优天数，社会经济影响因素中的全社会用电量和废气治理
+完成投资额与年度空气质量为优天数之间具有线性关系，GDP具有非线性作用；气候因素中
+的平均相对湿度和平均风速对年度空气质量为优天数有线性影响。地理因素中只有纬度变量
+对年度空气质量为优天数有显著性影响，并且关系是非线性的。对于月度空气质量为优天数，
+社会经济影响因素有房屋建筑施工面积和废气治理完成投资额，并且二者与年度空气质量为
+优天数之间均具有线性关系；气候因素中的平均气温，降水量，平均相对湿度和平均风速对
+月度空气质量为优天数有线性影响。地理因素中是否供暖和纬度变量对月度空气质量为优天
+数有显著性影响，是否供暖是线性关系，纬度是非线性影响。
 
 
 # 简介
@@ -276,284 +273,7 @@ mapply(function(i, y) {
 ```
 
 
-<!-- ## 年度空气质量为优天数线性回归模型 -->
 
-<!-- 先建立最简单的多元线性回归模型，作为后面复杂模型的比较基准。模型估计结果如表 -->
-<!-- \@ref(tab:tab-excel-y-huizong) 所示。由表 \@ref(tab:tab-excel-y-huizong) 可知，在筛选出的 -->
-<!-- 变量中，废气治理完成投资额、平均风速、临海、纬度这四个变量在10%的显著性水平下通 -->
-<!-- 过显著性检验，且其系数分别为-0.1342、0.6314、-0.988、0.4863，说明平均风速、纬度 -->
-<!-- 对年均空气质量为优天数呈正向影响，而废气治理完成投资、临海对年均空气质量为优天数 -->
-<!-- 呈负向影响。也就是说，在其他变量保持不变的条件下，废气治理完成投资额越多，年均空 -->
-<!-- 气质量为优的天数越少，空气质量越差；平均风速越大，年均空气质量为优天数越多，空气 -->
-<!-- 质量越好；纬度越高，年均空气质量为优天数越多，空气质量越好；平均来讲，临海地区比 -->
-<!-- 不临海地区年均空气质量为优天数少0.988天。但根据通常的认知，废气治理完成投资额越 -->
-<!-- 多，空气质量应该越好。在这里，本文可以做出如下解释，目前废气治理完成投资额不 -->
-<!-- 足，当空气污染严重时，才增加更多投资来缓解空气污染。因此，在线性回归模型中，在一 -->
-<!-- 定时间内，废气污染治理完成投资额越多，空气污染越严重。 -->
-
-<!-- ```{r tab-excel-lm-y, include=FALSE, results='markup'} -->
-<!-- varsel <- c(as.character(varinfo[,3][-c(1:3, 23:24)][getActive(gam1, 21, "nonzero")[[1]]]), -->
-<!--             "heating", "coast") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- lm.y.excel <- lm(dat.sel.y.excel[, c("excellent", varsel)]) -->
-<!-- lm.y.excel.coef <- summary(lm.y.excel)$coef -->
-
-<!-- AIC(lm.y.excel);BIC(lm.y.excel); -->
-<!-- #347.0319;379.3899 -->
-<!-- dimnames(lm.y.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lm.y.excel.coef,"C:/Users/Administrator/Desktop/lm.y.excel.coef.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lm.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年度空气质量为优天数线性回归模型回归系数表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 上述模型中我们并未考虑空间相关，而之前的莫兰指数的结果显示出年均空气质量为优天数 -->
-<!-- 存在空间自相关。因此，对残差进行空间自相关检验。在我们的研究中，只涉及四年的数据， -->
-<!-- 时间相对较短，因此不考虑时间相关。残差空间自相关检验结果如表 -->
-<!-- \@ref(tab:tab-excel-lm-y-res-spatial) 所示。由表 -->
-<!-- \@ref(tab:tab-excel-lm-y-res-spatial) 可知，在5%的显著性水平下，2014、2016、2017 -->
-<!-- 年的莫兰指数均未通过显著性检验，说明残差不存在空间自相关。 -->
-
-<!-- ```{r tab-excel-lm-y-res-spatial, results='markup'} -->
-<!-- library(ape) -->
-<!-- source("../codes/geodistance.R") -->
-<!-- city <- read.csv("../data/city_geo.csv", stringsAsFactors=FALSE) -->
-<!-- df.cities <- city[,c(1, 5, 6)] -->
-<!-- names(df.cities) <- c("name", "lat", "lon") -->
-<!-- city.dist.km <- round(GeoDistanceInMetresMatrix(df.cities) / 1000) -->
-<!-- city.dists.inv <- 1/city.dist.km -->
-<!-- diag(city.dists.inv) <- 0 -->
-
-<!-- moran.g.lm <- tapply(resid(lm.y.excel), as.factor(dat.sel.y.excel$year),  -->
-<!--               function(x) Moran.I(x, city.dists.inv) -->
-<!-- ) -->
-
-<!-- moran.g.lm <- sapply(moran.g.lm, function(x) c(x$observed, x$p.v)) -->
-<!-- dimnames(moran.g.lm)<- list(c("Moran's I", "P值"), paste0(2014:2017, "年")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年度空气质量为优天数线性回归模型残差空间自相关检验",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-
-<!-- ## 年度空气质量为优天数线性混合效应模型 -->
-
-<!-- 之后将城市作为随机效应建立线性混合模型，对空气质量为优的天数的影响因素进行分析。拟合结果如 -->
-<!-- 表 \@ref(tab:tab-excel-y-huizong) 所示。由表 \@ref(tab:tab-excel-y-huizong) 可以看出，在10%的显著性 -->
-<!-- 水平下，废气治理完成投资额、平均风速通过显著性检验，且其系数分别为-0.0868、0.4009。表明在 -->
-<!-- 其他变量保持不变的条件下，废气治理完成投资额越多，年均空气质量为优天数越少，空气质量越差； -->
-<!-- 平均风速越大，年均空气质量为优天数越多，空气质量越好。同样，在线性混合模型中，废气治理完成 -->
-<!-- 投资额与年均空气质量为优天数之间关系的符号仍然是正的，与线性回归模型结论一致，可以做出类似 -->
-<!-- 的解释。 -->
-
-<!-- ```{r tab-excel-lme-y, include=FALSE, results='markup'} -->
-
-<!-- library(mgcv) -->
-<!-- lme.y.excel <- gamm(excellent~gdp+power+gas_control -->
-<!--                    +rain+humid+wind_speed -->
-<!--                    +heating+coast+lat, -->
-<!--               random=list(city=~1), data=dat.sel.y.excel, method = "REML") -->
-<!-- AIC(lme.y.excel$lme);BIC(lme.y.excel$lme) -->
-<!-- #407.4109；441.8213 -->
-<!-- lme.y.excel.coef <- summary(lme.y.excel$lme)$tTable[,-3] -->
-
-<!-- dimnames(lme.y.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lme.y.excel.coef,"C:/Users/Administrator/Desktop/lme.y.excel.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lme.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年度空气质量为优天数线性混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ## 年度空气质量为优天数半参数回归模型 -->
-
-<!-- 由之前变量筛选的结果可知，地区生产总值、纬度与年均空气质量为优天数之间存在非线性 -->
-<!-- 相关关系。进一步建立半参数回归模型，建立的半参数模型参数部分结果显示在表 -->
-<!-- \@ref(tab:tab-excel-y-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-y) -->
-<!-- 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gam-y-smooth) 中。 -->
-
-
-<!-- ```{r tab-excel-gam-y, include=FALSE, results='markup'} -->
-<!-- library(mgcv) -->
-<!-- gam.y.excel <- gamm(excellent~s(gdp)+power+gas_control -->
-<!--                    +rain+humid+wind_speed -->
-<!--                    +heating+coast+s(lat), -->
-<!--                    data=dat.sel.y.excel, method = "REML") -->
-<!-- gam.y.excel.coef <- summary(gam.y.excel$lme)$tTable[-(9:10),-3] -->
-
-<!-- dimnames(gam.y.excel.coef) <- list(c("截距项", varselname[-c(1,9)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gam.y.excel.coef,"C:/Users/Administrator/Desktop/gam.y.excel.coef5.csv") -->
-<!-- #gam.y.excel$aic#306.42 -->
-<!-- #BIC(gam.y.excel$lme)#364.4073 -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年度空气质量为优天数半参数回归模型参数估计结果",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-excel-y-huizong) 可知，在10%的显著性水平下，全社会用电量、废气治 -->
-<!-- 理完成投资额、平均相对湿度、平均风速对年均空气质量为优天数存在显著影响，其系数分 -->
-<!-- 别为0.0013、-0.1091、0.0364、0.5378。表明在其他变量保持不变的条件下，全社会用电 -->
-<!-- 量越多，年均空气质量为优的天数越多，空气质量越好；废气污染治理完成投资额越多，年 -->
-<!-- 均空气质量为优天数越少，空气质量越差；平均相对湿度越大，年均空气质量为优的天数越 -->
-<!-- 多，空气质量越好；平均风速越大，年均空气质量为优天数越多，空气质量越好。 -->
-
-<!-- ```{r fig-excel-gam-y, eval=T, fig.height=3.5, fig.width=6.5,out.width="0.9\\textwidth", fig.pos="H", fig.cap = "年度空气质量为优天数半参数回归模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,2)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- plot.gam(gam.y.excel$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="excellent",xlab = "GDP" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gam.y.excel$gam, -->
-<!--          select=2, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "纬度" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-excel-gam-y-smooth, eval=T, results='markup'} -->
-<!-- gam.smooth.tab.y.excel <- summary(gam.y.excel$gam)$s.table[,-2] -->
-
-<!-- dimnames(gam.smooth.tab.y.excel) <- list(varselname[c(1,9)], c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="年度空气质量为优天数半参数回归模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 图 \@ref(fig:fig-excel-gam-y) 中显示了地区生产总值和纬度的拟合曲线，阴影部分表示 -->
-<!-- 95%的置信区间。同时由表 \@ref(tab:tab-excel-gam-y-smooth) 可知，在10%的显著性水 -->
-<!-- 平下，地区生产总值和纬度均通过显著性检验，表明地区生产总值和纬度对年均空气质量为 -->
-<!-- 优天数存在非线性影响。由图 \@ref(fig:fig-excel-gam-y) 可以发现，年均空气质量为优 -->
-<!-- 天数随地区生产总值的增加呈先下降后增加的变动趋势，具体来讲，地区生产总值在16000 -->
-<!-- 亿元之前年均空气质量为优天数随地区生产总值的增加呈下降的趋势，在16000亿元之后， -->
-<!-- 年均空气质量为优天数随地区生产总值的增加而缓慢上升，表明地区生产总值在达到一定程 -->
-<!-- 度之后，年均空气质量为优的天数会逐渐增加，空气质量会逐渐变好。且整体来讲，年均空 -->
-<!-- 气质量为优天数先随纬度的增加而下降，在北纬34度之后，年均空气质量为优的天数又随纬 -->
-<!-- 度的增加而增加。 -->
-
-<!-- ## 年度空气质量为优天数半参数混合效应模型 -->
-
-<!-- 以城市作为随机效应，进一步建立半参数混合效应模型，模型参数部分结果显示在表 -->
-<!-- \@ref(tab:tab-excel-y-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gamm-y) -->
-<!-- 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gamm-y-smooth) 中。 -->
-
-
-<!-- ```{r tab-excel-gamm-y, include=FALSE, results='markup'} -->
-<!-- library(mgcv) -->
-<!-- gamm.y.excel <- gamm(excellent~s(gdp)+power+gas_control -->
-<!--                    +rain+humid+wind_speed -->
-<!--                    +heating+coast+s(lat), -->
-<!--                random=list(city=~1), data=dat.sel.y.excel, method = "REML") -->
-<!-- AIC(gamm.y.excel$lme)#376.1004 -->
-<!-- BIC(gamm.y.excel$lme)#416.2459 -->
-<!-- gamm.y.excel.coef <- summary(gamm.y.excel$lme)$tTable[-(9:10),-3] -->
-
-<!-- dimnames(gamm.y.excel.coef) <- list(c("截距项", varselname[-c(1,9)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gamm.y.excel.coef,"C:/Users/Administrator/Desktop/gamm.y.excel.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年度空气质量为优天数半参数混合效应模型固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-excel-y-huizong) 可知，在10%的显著性水平下，半参数混合效应的参数部分 -->
-<!-- 各显著变量及其对年度空气质量为优天数的作用方向与半参数回归模型保持一致。 -->
-
-<!-- ```{r fig-excel-gamm-y, eval=T, fig.height=3.5, fig.width=6.5,out.width="0.9\\textwidth", fig.pos="H", fig.cap = "年度空气质量为 优天数半参数混合模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,2)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- plot.gam(gamm.y.excel$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="excellent",xlab = "GDP" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gamm.y.excel$gam, -->
-<!--          select=2, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "纬度" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-excel-gamm-y-smooth, eval=T, results='markup'} -->
-<!-- gamm.smooth.tab.y.excel <- summary(gamm.y.excel$gam)$s.table[,-2] -->
-
-<!-- dimnames(gamm.smooth.tab.y.excel) <- list(varselname[c(1,9)], c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="年度空气质量为优天数半参数混合模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 图\@ref(fig:fig-excel-gamm-y) 显示了半参数混合效应模型的非参数曲线，其非参数项为 -->
-<!-- 地区生产总值和纬度，且由表 \@ref(tab:tab-excel-gamm-y-smooth) 的非参数项显著性检 -->
-<!-- 验可知，在10%的显著性水平下，地区生产总值和纬度均通过显著性检验，表明地区生产总 -->
-<!-- 值和纬度均对年均空气质量为优天数存在非线性影响。且从图 -->
-<!-- \@ref(fig:fig-excel-gamm-y) 可以看出，年均空气质量为优天数随地区生产总值和纬度的 -->
-<!-- 增加均呈先下降后上升的趋势，这一结果与半参数回归模型中结果一致。 -->
 
 ## 年度空气质量为优天数模型建立与最优模型确定
 
@@ -771,275 +491,7 @@ mapply(function(i, y) {
 
 ```
 
-<!-- ## 月度空气质量为优天数泊松回归模型 -->
 
-<!-- 由于月度空气为优天数服从泊松分布，所以首先可以建立泊松回归模型作为比较的基准。泊 -->
-<!-- 松回归模型估计结果如表 \@ref(tab:tab-excel-m-huizong) 所示。 -->
-
-<!-- ```{r tab-excel-lm-m, include=FALSE, results='markup'} -->
-<!-- varsel <- c(as.character(varinfo[,3][-c(1:4, 24:25)][getActive(gam1, 25, "nonzero")[[1]]]), -->
-<!--             "heating", "coast") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- glm.m.excel <- glm(excellent~con_area+gas_control -->
-<!--                    +mean_temp+rain+humid+wind_speed+heating+coast -->
-<!--                    +lat, -->
-<!--                    data=dat.sel.m.excel, -->
-<!--                    family = "poisson") -->
-<!-- lm.m.excel.coef <- summary(glm.m.excel)$coef -->
-<!-- AIC(glm.m.excel);BIC(glm.m.excel) -->
-
-<!-- dimnames(lm.m.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lm.m.excel.coef,"C:/Users/Administrator/Desktop/lm.m.excel.coef.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月度空气质量为优天数泊松回归模型回归系数表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-excel-m-huizong) 可知，在筛选出的变量中，房屋建筑施工面积、废气治 -->
-<!-- 理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖、是否临海、纬度 -->
-<!-- 这些变量在10%的显著性水平下均通过显著性检验，且其系数分别为0.0000、-0.5486、 -->
-<!-- 0.031、0.0008、0.0309、0.3306、0.1992、0.0826、-0.017，说明平均气温、降水量、平 -->
-<!-- 均相对湿度、平均风速、供暖、临海对月均空气质量为优天数呈正向影响，而废气治理完成 -->
-<!-- 投资额和纬度对月均空气质量为优天数呈负向影响。也就是说，在其他变量保持不变的条件 -->
-<!-- 下，平均气温越高、降水量越多、平均相对湿度越大、平均风速越大、供暖、临海的地区， -->
-<!-- 月均空气质量为优的天数越多，空气质量越好；而废弃治理完成投资额越多，纬度越高的地 -->
-<!-- 区，月均空气质量为优的天数越少，空气质量越差。但根据我们的认知，废气治理完成投资 -->
-<!-- 额越多，空气质量应该越好，供暖地区比非供暖地区空气质量更差。在这里，对于废气治理 -->
-<!-- 完成投资额，我们可以做出同样的解释，目前废气治理完成投资额不足，当空气污染严重时， -->
-<!-- 才增加更多投资来缓解空气污染。而模型估计结果中供暖地区空气质量为优天数更多，可以 -->
-<!-- 认为当前估计的模型模型设定有问题，需要进一步改进。 -->
-
-<!-- ```{r tab-excel-lm-m-res-spatial, eval=FALSE, include=FALSE, results='markup'} -->
-<!-- library(ape) -->
-<!-- source("../codes/geodistance.R") -->
-<!-- city <- read.csv("../data/city_geo.csv", stringsAsFactors=FALSE) -->
-<!-- df.cities <- city[,c(1, 5, 6)] -->
-<!-- names(df.cities) <- c("name", "lat", "lon") -->
-<!-- city.dist.km <- round(GeoDistanceInMetresMatrix(df.cities) / 1000) -->
-<!-- city.dists.inv <- 1/city.dist.km -->
-<!-- diag(city.dists.inv) <- 0 -->
-
-<!-- moran.g.lm <- tapply(resid(glm.m.excel), as.factor(dat.sel.m.excel$year),  -->
-<!--               function(x) Moran.I(x, city.dists.inv) -->
-<!-- ) -->
-
-<!-- moran.g.lm <- sapply(moran.g.lm, function(x) c(x$observed, x$p.v)) -->
-<!-- dimnames(moran.g.lm)<- list(c("Moran's I", "P值"), paste0(2014:2017, "年")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月度空气质量为优天数泊松回归模型残差空间自相关检验",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ## 月度空气质量为优天数泊松混合效应模型 -->
-
-<!-- 把城市作为随机效应建立泊松混合模型，对空气质量影响因素进行分析。模型估计结果如表 -->
-<!-- \@ref(tab:tab-excel-m-huizong) 所示。由表 \@ref(tab:tab-excel-m-huizong) 可以看出，在10% -->
-<!-- 的显著性水平下，房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、平均相对 -->
-<!-- 湿度、平均风速、是否供暖、纬度通过显著性检验，且其系数分别为-0.0001、-0.9775、 -->
-<!-- 0.1624、0.0105、0.1129、1.483、2.9745、-0.2114。表明在其他变量保持不变的条件下， -->
-<!-- 平均气温越高、降水量越多、平均相对湿度越大、平均风速越大、供暖的地区，其月均空气 -->
-<!-- 质量为优的天数越多，空气质量越好；而房屋建筑施工面积越大、废气治理完成投资额越多、 -->
-<!-- 纬度越高的地区，其月均空气质量为优的天数越少，空气质量越差。同样，在泊松混合模型 -->
-<!-- 中，废气治理完成投资额与月均空气质量为优天数之间关系的符号仍然是正的，供暖与月均 -->
-<!-- 空气质量为优的天数之间关系的符号也是正的，与泊松回归模型结论一致，可以做出类似的 -->
-<!-- 解释。 -->
-
-<!-- ```{r tab-excel-lme-m, include=FALSE, results='markup'} -->
-<!-- library(mgcv) -->
-<!-- lme.m.excel <- gamm(excellent~con_area+gas_control+mean_temp+rain+humid+wind_speed +heating+coast+lat, -->
-<!--               random=list(city=~1), data=dat.sel.m.excel, method = "REML") -->
-<!-- AIC(lme.m.excel$lme);BIC(lme.m.excel$lme) -->
-<!-- lme.m.excel.coef <- summary(lme.m.excel$lme)$tTable[,-3] -->
-
-<!-- dimnames(lme.m.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lme.m.excel.coef,"../results/lme.m.excel.coef.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lme.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月度空气质量为优天数泊松混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-<!-- ``` -->
-
-<!-- ## 月度空气质量为优天数泊松可加模型 -->
-
-<!-- 由之前变量筛选的结果可知，纬度与月均空气质量为优天数之间存在非线性相关关系。因此 -->
-<!-- 可以建立泊松可加模型。建立的泊松可加模型中参数部分结果显示在表 -->
-<!-- \@ref(tab:tab-excel-m-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-m) -->
-<!-- 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gam-m-smooth) 中。 -->
-
-<!-- 由表 \@ref(tab:tab-excel-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、废 -->
-<!-- 气治理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖对月均空气质 -->
-<!-- 量为优天数存在显著影响，其系数分别为0.0000、-0.1845、0.037、0.0005、0.031、 -->
-<!-- 0.2714、0.3783。表明在其他变量保持不变的条件下，平均气温越高、降水量越大、平均相 -->
-<!-- 对湿度越大、平均风速越大、供暖的地区，月均空气质量为优的天数越多，空气质量越好； -->
-<!-- 而废气治理完成投资额越多的地区，月均空气治理为优的天数越少，空气质量越差。 -->
-
-
-<!-- ```{r tab-excel-gam-m, include=FALSE, results='markup'} -->
-
-<!-- library(mgcv) -->
-<!-- gam.m.excel <- gamm(excellent~con_area+gas_control -->
-<!--                    +mean_temp+rain+humid+wind_speed+heating+coast -->
-<!--                    +s(lat), -->
-<!--                    data=dat.sel.m.excel, -->
-<!--                    family = "poisson", method = "REML") -->
-<!-- gam.m.excel.coef <- summary(gam.m.excel$lme)$tTable[-(10),-3] -->
-<!-- #AIC(gam.m.excel);BIC(gam.m.excel) -->
-<!-- dimnames(gam.m.excel.coef) <- list(c("截距项", varselname[-c(9)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gam.m.excel.coef,"C:/Users/Administrator/Desktop/gam.m.excel.coef.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月度空气质量为优天数泊松半参数回归模型参数估计结果",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ```{r fig-excel-gam-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.7\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月度空气质量为优天数泊松可加模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,1)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- par(cex.axis = 0.9, cex.lab = 0.9) -->
-<!-- plot.gam(gam.m.excel$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="excellent",xlab = "纬度" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-excel-gam-m-smooth, eval=T, results='markup'} -->
-<!-- gam.smooth.tab.m.excel <- t(as.data.frame(summary(gam.m.excel$gam)$s.table[,-2])) -->
-
-<!-- dimnames(gam.smooth.tab.m.excel) <- list(varselname[c(9)], c("经验自由度", "卡方统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="月度空气质量为优天数泊松半参数回归模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 图 \@ref(fig:fig-excel-gam-m) 中显示了纬度的拟合曲线，阴影部分表示95%的置信区间。 -->
-<!-- 由表 \@ref(tab:tab-excel-gam-m-smooth) 可知，纬度通过显著性检验，表明纬度对月均 -->
-<!-- 空气质量为优天数存在非线性影响。由图 \@ref(fig:fig-excel-gam-m) 可以发现，月均空 -->
-<!-- 气质量为优天数随纬度呈不规则变动，具体来讲，可以分为以下几个阶段。在北纬25度之前， -->
-<!-- 月均空气质量为优的天数随纬度的增加呈小幅度增加，在北纬25-35度之间，月均空气质量为 -->
-<!-- 优的天数随纬度的增加显著下降，在北纬35-40度之间，月均空气质量为优的天数随纬度的增加显 -->
-<!-- 著增加，纬度在北纬40-45度之间，月均空气质量为优的天数随纬度的增加呈小幅下降，在 -->
-<!-- 北纬45度之后，月均空气质量为优的天数又随纬度的增加而显著增加。 -->
-
-<!-- ## 月度空气质量为优天数泊松可加混合效应模型 -->
-
-<!-- 以城市作为随机效应，进一步建立泊松可加混合效应模型。估计的模型中参数部分结果显示 -->
-<!-- 在表 \@ref(tab:tab-excel-m-huizong) 中，非参数项的曲线显示在图 -->
-<!-- \@ref(fig:fig-excel-gamm-m) 中，非参数项显著性检验结果在表 -->
-<!-- \@ref(tab:tab-excel-gamm-m-smooth) 中。 -->
-
-<!-- ```{r tab-excel-gamm-m-model, eval=T, results='hide'} -->
-
-<!-- library(mgcv) -->
-<!-- gamm.m.excel <- gamm(excellent~con_area+gas_control -->
-<!--                      +mean_temp+rain+humid+wind_speed+heating+coast -->
-<!--                      +s(lat), -->
-<!--                      random=list(city=~1), data=dat.sel.m.excel, -->
-<!--                      family = "poisson", method = "REML") -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-excel-gamm-m, include=FALSE, results='markup'} -->
-<!-- gamm.m.excel.coef <- summary(gamm.m.excel$lme)$tTable[-(10),-3] -->
-<!-- AIC(gamm.m.excel$lme);BIC(gamm.m.excel$lme) -->
-<!-- dimnames(gamm.m.excel.coef) <- list(c("截距项", varselname[-c(9)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gamm.m.excel.coef,"C:/Users/Administrator/Desktop/gamm.m.excel.coef.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月度空气质量为优天数泊松可加混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-excel-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、 -->
-<!-- 废气治理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖均通过显著性 -->
-<!-- 检验，且其系数分别为0.0000、-0.2094、0.0391、0.0005、0.0374、0.3613、0.4102。表明 -->
-<!-- 在其他条件不变的前提下，平均气温越高、降水量越多、平均相对湿度越大、平均风速越大、 -->
-<!-- 供暖的地区，月均空气质量为优天数越大，空气质量越好；而废气治理完成投资额越多，月均 -->
-<!-- 空气质量为优的天数越少，空气质量越差。 -->
-
-<!-- ```{r fig-excel-gamm-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.7\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月度空气质量为优天数泊松可加混合模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,1)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- par(cex.axis = 0.9, cex.lab = 0.9) -->
-
-<!-- plot.gam(gamm.m.excel$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="excellent",xlab = "纬度" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-excel-gamm-m-smooth, eval=T, results='markup'} -->
-<!-- gamm.smooth.tab.m.excel <- t(as.data.frame(summary(gamm.m.excel$gam)$s.table[,-2])) -->
-
-<!-- dimnames(gamm.smooth.tab.m.excel) <- list(varselname[c(9)],c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="月度空气质量为优天数泊松可加混合模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 图 \@ref(fig:fig-excel-gamm-m) 显示了泊松可加混合效应模型的非参数曲线，其非参数 -->
-<!-- 项为纬度，且由表 \@ref(tab:tab-excel-gamm-m-smooth) 的非参数项显著性检验可知，在 -->
-<!-- 10%的显著性水平下，纬度通过显著性检验，表明纬度对月均空气质量为优天数存在非线性 -->
-<!-- 影响。且从图 \@ref(fig:fig-excel-gamm-m) 可以看出，月均空气质量为优天数随纬度的 -->
-<!-- 增加呈不规则变化，但整体来讲，纬度在35之前，月均空气质量为优天数随纬度的增加而下 -->
-<!-- 降，纬度在35之后，月均空气质量为优天数随纬度的增加而增加。 -->
 
 ## 月度空气质量为优天数模型建立与最优模型确定
 
