--- a/report/index.Rmd
+++ b/report/index.Rmd
@@ -9,7 +9,7 @@ eqnPrefixTemplate: ($$i$$)
 linkReferences: true
 csl: ./style/chinese-gb7714-2005-numeric.csl
 link-citations: true
-lot: yes
-lof: yes
-listings: yes
+lot: true
+lof: true
+listings: true
 ---
