--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "基于广义可加混合模型空气质量为优天数影响因素研究"
-author: "Jin"
-date: '2019-04-15'
+author: '金林&nbsp; 李研&nbsp; 王红红'
+date: '（中南财经政法大学&nbsp; 统计与数学学院，湖北&nbsp; 武汉 430073）'
 output:
   bookdown::pdf_document2:
     keep_tex: true
@@ -35,13 +35,11 @@ csl: ../style/chinese-gb7714-2005-numeric.csl
 autoEqnLabels: true
 ---
 
-
-
 ```{r setup, echo=F}
-
 knitr::opts_knit$set(root.dir = getwd())
 knitr::opts_chunk$set(echo = FALSE, results = 'hide')
 knitr::opts_chunk$set(warning = FALSE, message=FALSE)
+options(kableExtra.auto_format = F)
 ```
 
 ```{r prepare}
@@ -63,6 +61,29 @@ Sys.setlocale("LC_ALL", "Chinese")
 月度空气质量为优天数有线性影响。地理因素中是否供暖和纬度变量对月度空气质量为优天
 数有显著性影响，是否供暖是线性关系，纬度是非线性影响。
 
+**关键词：** 空气质量为优天数； 广义可加混合模型； 影响因素
+
+**中图分类号：** C811 	**文献标识码：**A
+
+**Analysis of influencing factors of the number of yearly and monthly excellent-grade air quality days Based on Generalized Additive Mixed Model**
+
+**Abstract：**This paper takes the number of yearly and monthly excellent-grade 
+air quality days in 35 cities monitored in China from 2014 to 2017 as the research 
+object, and uses the generalized additive model to study the influencing factors of 
+urban air quality. The research results show that for the yearly excellent-grade air
+quality days, the total social electricity consumption and the investment of waste gas 
+treatment in the socio-economic factors have a has a positive linear effect, GDP has 
+a nonlinear effect; the average humidity and average wind speed in the
+climate factors have a linear effect. Among the geographical factors, only the latitude 
+has a significant influence on the annual excellent-grade air quality days, and the 
+relationship is nonlinear. For the monthly excellent-grade air quality days, the two 
+influencing factors of the socio-economic aspects: the building construction area and
+the investment of waste gas treatment are linear effects; the average temperature, 
+precipitation, average humidity and average wind speed in the climate factors have
+significant linear effects; whether heating are linear and latitude has a significant 
+nonlinear effect on monthly excellent-grade air quality days.
+
+**Key Words:** the Number of Excellent-grade Air Quality Days; Generalized Additive Mixed Model; Influencing Factors
 
 # 简介
 随着我国城市化的不断发展，大气污染等环境问题越来越严重，已对我国可持续发展构成严重威胁。
@@ -95,13 +116,10 @@ Sys.setlocale("LC_ALL", "Chinese")
 年度空气质量为优的天数和月度空气质量为优的天数为因变量建立广义可加混合模型进行相应研究，
 为空气质量状况研究提供新的研究方法，并完善空气质量状况的研究体系。
 
-## 广义可加混合模型简介
-
-广义加性混合模型（GAMM）为涉及横截面，纵向和空间数据现实复杂情况下的回归分析提供
-了广泛而灵活的框架。它们扩展了广义线性模型，通过将未知的度量自变量，时间尺度和空
-间自变量的光滑函数以及随机效应添加到预测子的一般线性固定效应部分。该模型使用可加
-非参数函数来拟合自变量的效应，并通过对可加预测子增加随机效应来应对数据中存在的异
-质性和相关性。
+广义加性混合模型（GAMM）是根据 Hastie and Tibshirani (1990) 的思想对 GLMM 
+的可加模型进行推广[@hastie1990]。这种新类型模型使用可加非参数函数
+来拟合自变量的效应，并通过对可加预测子增加随机效应来应对数据中的过离散化和相
+关性。
 
 假设$n$个个体的第$i$个观测值的因变量$y_{i}$条件独立，并且期望
 为$\mathbb{E}(y_{i}|\boldsymbol{b})=\mu_{i}^{\boldsymbol{b}}$，方差为
@@ -117,11 +135,13 @@ $$g(\mu_{i}^{\boldsymbol{b}})=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_
 的设计矩阵，$\boldsymbol{b \sim \mathcal{N} (0, \Psi)}$ 是随机效应变量，其中方差
 协方差阵$\boldsymbol{\Psi}$ 一般未知而需要估计。
 
-在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，而随机效应用来拟合观
-测值之间的相关关系。当光滑函数$f(\cdot)$都为线性函数时，那么此时GAMM就变化为GLMM。
+在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，而随机效应用来拟合数据中存在的异
+质性和相关性。当光滑函数$f(\cdot)$都为线性函数时，那么此时GAMM就变化为GLMM。
 GAMM可以用于不同的相关数据类型，如纵向数据，分层数据、空间数据等。对于不同的数据
-类型，需要对随机效应$\boldsymbol{b}$设定不同的方差协方差矩阵结构。本文使用R进行
-模型计算。
+类型，需要对随机效应$\boldsymbol{b}$设定不同的方差协方差矩阵结构。GAMM 的非参数函数、
+光滑参数和方差成分的估计可以通过已有的统计软件拟合一个 GLMM来得到。关于广义可加
+混合模型的估计和推断更详细的讨论可以参考 Lin，Zhang(1999) 和 Wood(2006)[@Lin1999;@wood2006]。
+本文使用R包mgcv进行模型计算。
 
 文章以下部分的结构为：第二部分说明了变量选择和数据来源，给出了数据处理过程；第三
 部分在使用Lasso方法选择自变量的基础上，以年度空气质量为优的天数为因变量建立了广义
@@ -267,8 +287,6 @@ mapply(function(i, y) {
 ```
 
 
-
-
 ## 年度空气质量为优天数模型建立与最优模型确定
 
 使用Lasso方法得到的模型参数估计值是有偏，下面对基于Lasso方法筛选出的变量重新进行
@@ -289,7 +307,7 @@ yearly=yearly..[-c(seq(1,37,4)+2,seq(1,37,4)+3),]
 library("kableExtra")
 knitr::kable(yearly, row.names =F, align = c("l", "c", "c", "c"),
              caption="年度平均空气质量为优天数模型汇总表",digits = 4,
-             longtable = TRUE, booktabs = TRUE, escape = F) %>%
+             longtable = TRUE, booktabs = TRUE, escape = F,linesep="") %>%
     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
@@ -298,7 +316,6 @@ knitr::kable(yearly, row.names =F, align = c("l", "c", "c", "c"),
     footnote(general ="数字后面的***表示p<0.001,**表示p<0.01,*表示p<0.05,.表示p<0.1",
              general_title = "注:",footnote_as_chunk = T
              )
-
 ```
 
 根据表 \@ref(tab:tab-excel-y-huizong) 可知，在线性回归模型(模型I)中，显著的变量有废气
@@ -496,14 +513,13 @@ mapply(function(i, y) {
 ```{r tab-excel-m-huizong, eval=T, results='markup'}
 monthly=read.csv("../results/monthly-excel.csv")
 #rm(list=ls())
-
 monthly..=apply(monthly,2,function(x) as.character(x))
 monthly..[seq(1,37,4)+1,(2:5)]=t(apply(monthly..[seq(1,37,4)+1,(2:5)],1,function(x) {as.factor(paste('(',as.character(-as.numeric(x)),')',sep = ""))}))
 monthly=monthly..[-c(seq(1,37,4)+2,seq(1,37,4)+3),]
 library("kableExtra")
 knitr::kable(monthly, row.names =F, align = c("l", "c", "c", "c"),
              caption="月度空气质量为优天数模型汇总表",digits = 4,
-             longtable = TRUE, booktabs = TRUE, escape = F) %>%
+             longtable = TRUE, booktabs = TRUE, escape = F,linesep="") %>%
     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
@@ -533,12 +549,12 @@ knitr::kable(monthly, row.names =F, align = c("l", "c", "c", "c"),
 图 \@ref(fig:fig-excel-gam-m-best) 中，非参数项显著性检验结果在表
 \@ref(tab:tab-excel-gam-m-smooth-best) 中。
 
-
-
-```{r tab-excel-gam-m-best, include=FALSE, results='markup'}
+```{r include=FALSE}
 varsel <- c(as.character(varinfo[,3][-c(1:4, 24:25)][getActive(gam1, 25, "nonzero")[[1]]]),  "heating", "coast") 
 varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] 
 varselname <- as.character(varselname[order(varselname$var_no), 2]) 
+
+dat.sel.m.excel <- read.csv("../results/dat.sel.m.excel.csv")
 library(mgcv)
 gam.m.excel.best <- gamm(excellent~con_area+gas_control
                    +mean_temp+rain+humid+wind_speed+heating
@@ -550,7 +566,9 @@ gam.m.excel.best <- gamm(excellent~con_area+gas_control
 gam.m.excel.best.coef <- summary(gam.m.excel.best$lme)$tTable[-(9),-3]
 
 dimnames(gam.m.excel.best.coef) <- list(c("截距项", varselname[-c(8,9)]), c("估计值", "标准误", "t值", "P值"))
+```
 
+```{r tab-excel-gam-m-best, results='markup'}
 library("kableExtra")
 knitr::kable(gam.m.excel.best.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="月度空气质量为优天数最优模型参数估计结果",digits = 4,
